tests/fixtures/invalid/bool_mul_none.py
# Cannot multiply Bool and None
x: bool = True * None
